--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-tap-mode.el - A major mode for editing .tap-files in (X)Emacs
+tap-mode.el - A major mode for editing .tap-files in Emacs
 
 TAP is the Test Anything Protocol, a communication protocol
 between unit tests and a test harness.
@@ -31,21 +31,10 @@ into your ~/.emacs
 
 Author:  Steffen Schwigon <ss5@renormalist.net>
 License: GPL
-Tested:  i386-linux       with XEmacs    21.4
-         i386-linux       with GNU Emacs 21.2.1
-         i386-windows-w2k with XEmacs    21.4
+Tested:  i386-linux       with GNU Emacs 23.0.91.1
 
-This mode is built with help of the
-"Emacs language mode creation tutorial" at
-http://two-wugs.net/emacs/mode-tutorial.html
+This mode is built with help of the "Emacs language mode creation
+tutorial" written by Scott Andrew Borton, now hosted at
+http://renormalist.net/cgi-bin/twiki/view/Renormalist/EmacsLanguageModeCreationTutorial
 
-Regexes are defined for the following font-lock-faces:
-
-  font-lock-keyword-face
-  font-lock-type-face
-  font-lock-comment-face
-  font-lock-reference-face
-  font-lock-doc-string-face
-  font-lock-function-name-face
-
-I'm interested in comments/enhancements/bugfixes.
+I'm interested in comments/enhancements/bugfixes/cpanrating.
