--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2010-07-08  Steffen Schwigon  <ss5@renormalist.net>
+
+	* 0.05
+
+	* just distribution maintenance
+	- use Dist::Zilla and a Perl module as container
+	to encapsulate CPAN meta information
+
 2009-09-22  Steffen Schwigon  <ss5@renormalist.net>
 
 	* 0.04
